# python-library

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: README.md  address-maps.md  api-reference.md  cli.md  examples.md  http-api.md  machine.md  memory.md
examples/: discover_boards.py  elvira_hurryup.py  update_all_boards.py
notes/: DECISIONS.md  TODO.md
scripts/: check_version.py  check_version_bump.py  coverage_diff.py  gen_docs.py
tests/: conftest.py  test_addresses.py  test_auth.py  test_check_version_bump.py  test_cli.py  test_connect.py  test_discovery.py  test_discovery_e2e.py  test_exceptions.py  test_http.py  test_machine.py  test_models.py  test_transports_base.py  test_usb.py  test_version.py
warpedpinball/: __init__.py  addresses.py  auth.py  cli.py  discovery.py  exceptions.py  machine.py  models.py
warpedpinball/transports/: __init__.py  http.py  usb.py
