[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warpedpinball"
dynamic = ["version"]
description = "Python client for Warped Pinball Vector boards (HTTP, USB serial, and UDP discovery)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Warped Pinball" }]
keywords = ["pinball", "warped-pinball", "vector", "raspberry-pi-pico"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Arcade",
    "Topic :: System :: Hardware",
]
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
usb = ["pyserial>=3.5"]
dev = ["pytest>=7", "ruff>=0.4", "pyserial>=3.5", "build"]

[project.urls]
Homepage = "https://github.com/warped-pinball/python-library"
Issues = "https://github.com/warped-pinball/python-library/issues"

[project.scripts]
vector = "warpedpinball.cli:main"

[tool.hatch.version]
# Single source of truth for the version: warpedpinball/__init__.py __version__.
path = "warpedpinball/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["warpedpinball"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    # Keep typing.Optional/List/Union spellings: runtime type aliases must
    # stay 3.9-compatible, and mixing styles is worse than one old style.
    "UP006",
    "UP007",
    "UP035",
    "UP037",
    "UP045",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
